# advanced-prograding

./: CMakeLists.txt  log.txt  main.cpp
Tests/: CMakeLists.txt  TestCab.cpp  TestDriver.cpp  TestFlowManager.cpp  TestGridManager.cpp  TestGridNode.cpp  TestPassenger.cpp  TestStatistics.cpp  TestTaxiCenter.cpp  TestTrip.cpp
ex4Client/: CMakeLists.txt  Cab.h  Client.out  Driver.cpp  Driver.h  Passenger.h  Point.h  Socket.cpp  Socket.h  Trip.h  a.out  main.cpp  makefile
ex4Client2/: CMakeLists.txt  Cab.cpp  Driver.h  Point.cpp  Tcp.cpp  Tcp.h  Trip.cpp  Udp.cpp  Udp.h  main.cpp
ex4Client2/Client.out.dSYM/Contents/: Info.plist
ex4Client2/Client.out.dSYM/Contents/Resources/DWARF/: Client.out
ex4Server/: CMakeLists.txt  Server.out  a.out  makefile
ex4Server/Server.out.dSYM/Contents/: Info.plist
ex4Server/Server.out.dSYM/Contents/Resources/DWARF/: Server.out
ex4Server/src/: CMakeLists.txt  Cab.cpp  Cab.h  CommunicationManager.cpp  CommunicationManager.h  Driver.cpp  Driver.h  DriverLocationListener.cpp  DriverLocationListener.h  FlowManager.cpp  FlowManager.h  GridManager.cpp  GridManager.h  GridNode.cpp  GridNode.h  LuxuryCab.cpp  Manager.cpp  Manager.h  Map.cpp  Map.h  Node.cpp  Node.h  ObstacleNode.cpp  ObstacleNode.h  Passenger.cpp  Passenger.h  Point.cpp  Point.h  Socket.h  Statistics.cpp  Statistics.h  TaxiCenter.cpp  TaxiCenter.h  Tcp.cpp  Tcp.h  Trip.cpp  Trip.h  Udp.cpp  Udp.h  main.cpp
src/: CMakeLists.txt  Cab.cpp  Cab.h  Driver.cpp  Driver.h  DriverLocationListener.cpp  FlowManager.cpp  FlowManager.h  GridManager.cpp  GridManager.h  GridNode.h  LuxuryCab.cpp  LuxuryCab.h  Manager.cpp  Map.cpp  Map.h  Node.cpp  ObstacleNode.h  Passenger.cpp  Point.cpp  Point.h  Statistics.cpp  TaxiCenter.cpp  TaxiCenter.h  Trip.cpp
